[gd_scene load_steps=7 format=3 uid="uid://cq0ebb2woqtf"]

[ext_resource type="Texture2D" uid="uid://b5ll8tckr4wy3" path="res://icon.svg" id="1_3t0h4"]
[ext_resource type="Script" uid="uid://do2ydagxibx88" path="res://scripts/interactive_tile_set.gd" id="1_t7yk0"]
[ext_resource type="Texture2D" uid="uid://betoiggg6jjxr" path="res://sprites/grass_tile1.png" id="2_ifb8n"]
[ext_resource type="Texture2D" uid="uid://dx8xuvg44dw6r" path="res://sprites/grass_tile2.png" id="3_v28dg"]
[ext_resource type="Texture2D" uid="uid://bbd2e61oi2c8r" path="res://sprites/Oduv_v2.png" id="5_ifb8n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3t0h4"]
size = Vector2(128, 128)

[node name="InteractiveTileSet" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_t7yk0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3t0h4")

[node name="default_sprite1" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.119, 0.119)
texture = ExtResource("2_ifb8n")

[node name="default_sprite2" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.119, 0.119)
texture = ExtResource("3_v28dg")

[node name="hover_sprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0.996078, 0.65098, 1)
texture = ExtResource("1_3t0h4")

[node name="selected_sprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 0.192157, 1)
texture = ExtResource("1_3t0h4")

[node name="flower_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-1.13687e-13, 1.19209e-07)
scale = Vector2(0.118519, 0.118519)
texture = ExtResource("5_ifb8n")

[node name="seed_sprite" type="Sprite2D" parent="."]
visible = false
modulate = Color(0.556643, 0.233059, 0.0438032, 1)
scale = Vector2(0.29, 0.29)
texture = ExtResource("1_3t0h4")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
